--- a/src/main.css
+++ b/src/main.css
@@ -87,20 +87,49 @@ main, footer {
 section {
   position: relative;
 }
-.sub-banner-1, .sub-banner-2, .sub-banner-3 {
-  margin-top: 30px;
+
+.quiz-section {
+  justify-content: space-between;
+  margin: 30px;
 }
-.sub-banner-1 {
+
+.product-choice {
+  width: calc(33% - 5px);
+  height: 300px;
   position: relative;
-  left: 0;
+  background-color: #FBFAFA;
 }
-.sub-banner-2 {
-  position: relative;
-  left: 29px;
+
+.product-choice img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
 }
-.sub-banner-3 {
+
+h2, h3 {
   position: relative;
-  left: 54px;
+  text-align: center;
+  margin-bottom: 0;
+}
+
+table {
+  width: 600px;
+  margin: 100px auto 200px auto;
+  background-color: gainsboro;
+  border:  1px solid #A1ADC2;
+}
+
+tr:nth-child(even) {
+  background-color: #FBFAFA;
+}
+
+thead {
+  background-color: #42659B;
+  color: #FBFAFA;
+}
+
+.times-clicked {
+  text-align: center;
 }
 
 .footer {
