--- a/src/main.css
+++ b/src/main.css
@@ -128,6 +128,14 @@ thead {
   color: #FBFAFA;
 }
 
+#restart-button {
+  position: relative;
+  bottom: 100px;
+  left: 430px;
+  width: 200px;
+  height: 30px;
+}
+
 .times-clicked {
   text-align: center;
 }
